# TicTacToe

./: Main.qml  README.md  RoundButton.qml  controller.h  model.h
TicTacToe/: CMakeLists.txt  CMakeLists.txt.user.b04d796  Main.qml  controller.cpp  main.cpp  model.cpp  model.h
